# ZeroBP

./: README.md  environment.yaml  pyproject.toml  requirements.txt  ruff.toml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml
configs/datamodule/: bop.yaml  dummy.yaml
configs/env/: local.yaml
configs/experiment/: debug.yaml  wandb_debug.yaml
configs/hydra/: default.yaml
configs/logger/: csv.yaml  wandb.yaml
configs/model/: zero_bp_stub.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
scripts/: run_debug.sh
src/: eval.py  train.py
src/zerobp/: __init__.py
src/zerobp/callbacks/: __init__.py
src/zerobp/datamodules/: __init__.py  bop_datamodule.py  dummy_datamodule.py
src/zerobp/models/: __init__.py  zero_bp_module.py
src/zerobp/utils/: __init__.py
tests/: test_smoke.py
